realized i was doing everything worng back on track now

--- a/index.html
+++ b/index.html
@@ -7,47 +7,16 @@
     <title>Legend of Zelda Trivia</title>
 </head>
 <body>
-    <header class="header">
-        <h1 class="lozt">Legend of Zelda Trivia!</h1>
-        <nav>
-            <a href="high-score" id="high-score">High Score</a>
-        </nav>
-    </header>
-    <section>
-        <h2 class="question" id="question-1">Which game in the series was the first to feature 3D graphics?</h2>
-            <ol>
-                <li>The Legend of Zelda: Majora's Mask</li>
-                <li>The Legend of Zelda: A Link to the Past</li>
-                <li>The Legend of Zelda: Ocarina of Time</li>
-                <li>The Legend of Zelda: The Wind Waker</li>
-            </ol>
-    </section>
-    <section>
-        <h2 class="question" id="question-2">What is the name of the land in which most of the games take place?</h2>
-            <ol>
-                <li>Hyrule</li>
-                <li>Termina</li>
-                <li>Lorule</li>
-                <li>The Great Sea</li>
-            </ol>
-    </section>
-    <section>
-        <h2 class="question" id="question-3">What is the name of the guardian spirit that guides Link in Ocarina of Time?</h2>
-         <ol>
-            <li>Midna</li>
-            <li>Mipha</li>
-            <li>Navi</li>
-            <li>Daruk</li>
-         </ol>
-    </section>
-    <section>
-        <h2 class="question" id="question-4">How many masks can be collected in The Legend of Zelda: Majora's Mask?</h2>
-         <ol>
-            <li>10 masks</li>
-            <li>24 masks</li>
-            <li>33 masks</li>
-            <li>27 masks</li>
-         </ol>
-    </section>
+    <a href="Highscore.html">View High scores</a>
+    <div id="wrapper">
+        <div id="timer"></div>
+        <div id="questions">
+            <h1>Legend of Zelda Trivia!</h1>
+            <p>Lets see how good your Legend of Zelda knowledge is.Wrong answers lower your score beware.</p>
+        <ul id="choices"></ul>
+        <button id="StartTime">Start Quiz</button>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
