added some styling

--- a/Highscore.html
+++ b/Highscore.html
@@ -12,9 +12,9 @@
         <div id="timer"></div>
         <div id="questions">
             <h1>High Scores!</h1>
-            <ul id="highscore"></ul>
+            <ul id="high-score"></ul>
             <button id="back">Go back</button>
-            <button id="clearHS" value="reset">Clear High Score</button>
+            <button id="clear-HS" value="reset">Clear High Score</button>
         </div>
     </div>
     <script src="score.js"></script>
