--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <title>Legend of Zelda Trivia</title>
 </head>
 <body>
-    <a href="Highscore.html">View High scores</a>
+    <a href="Highscore.html" id="score">View High scores</a>
     <div id="wrapper">
         <div id="timer"></div>
         <div id="questions">
             <h1>Legend of Zelda Trivia!</h1>
-            <p>Lets see how good your Legend of Zelda knowledge is.Wrong answers lower your score beware.</p>
+            <p>Lets see how good your Legend of Zelda knowledge is.Wrong answers lower your score beware.
+            </p>
         <ul id="choices"></ul>
-        <button id="StartTime">Start Quiz</button>
+        <button id="start-time">Start Quiz</button>
         </div>
     </div>
     <script src="script.js"></script>
