added what i could still a little buggy

--- a/Highscore.html
+++ b/Highscore.html
@@ -12,7 +12,7 @@
         <div id="timer"></div>
         <div id="questions">
             <h1>High Scores!</h1>
-            <ul id="high-score"></ul>
+            <ul id="highscore"></ul>
             <button id="back">Go back</button>
             <button id="clear-HS" value="reset">Clear High Score</button>
         </div>
